# assembly_uploader

./: .editorconf  .git-blame-ignore-revs  .pre-commit-config.yaml  README.md  assembly_manifest.py  ena_queries.py  pyproject.toml  pytest.ini  requirements.yml  submit_study.py
.github/workflows/: ci.yml  lint.yml  pypi.yml
assembly_uploader/: __init__.py  assembly_manifest.py  ena_queries.py  study_xmls.py
assemblyuploader/: assembly_manifest.py  ena_queries.py  study_xmls.py  submit_study.py
test/: test_metadata
test/SRP272267_upload/: ERR1.manifest  ERR2.manifest  ERR3.manifest  SRP272267_reg.xml  SRP272267_submission.xml
tests/: conftest.py
tests/fixtures/: test_metadata
tests/fixtures/ERP125469_upload/: ERP125469_reg.xml  ERP125469_submission.xml  ERR4918394.manifest
tests/fixtures/SRP272267_upload/: SRP272267_reg.xml  SRR12240187.manifest
tests/unit/: test_assembly_manifest.py  test_assembly_manifest.yml  test_ena_queries.py  test_release_study.py  test_study_xmls.py  test_study_xmls.yml  test_submit_study.py
